# boggled

./: Boggled.idl  README.md  TODELETE.md  boggled.idl
BoggledApp/: AlreadyLoggedInException.java  AlreadyLoggedInExceptionHelper.java  AlreadyLoggedInExceptionHolder.java  Boggled.java  BoggledHelper.java  BoggledHolder.java  BoggledOperations.java  BoggledPOA.java  Callback.java  CallbackHelper.java  CallbackHolder.java  CallbackOperations.java  CallbackPOA.java  InsufficientPlayerException.java  InsufficientPlayerExceptionHelper.java  InsufficientPlayerExceptionHolder.java  Leaderboards.java  LeaderboardsHelper.java  LeaderboardsHolder.java  NoWinnerException.java  NoWinnerExceptionHelper.java  NoWinnerExceptionHolder.java  NotLoggedInException.java  NotLoggedInExceptionHelper.java  NotLoggedInExceptionHolder.java  UserNotFoundException.java  UserNotFoundExceptionHelper.java  UserNotFoundExceptionHolder.java  _BoggledStub.java  _CallbackStub.java
CORBA IDL/: README.md
Client_Java/BoggledApp/: AlreadyLoggedInException.java  AlreadyLoggedInExceptionHelper.java  AlreadyLoggedInExceptionHolder.java  Boggled.java  BoggledHolder.java  Callback.java  CallbackHelper.java  CallbackOperations.java  InsufficientPlayerExceptionHelper.java  InsufficientPlayerExceptionHolder.java  _CallbackStub.java
Client_Java/src/BoggledApp/: AlreadyLoggedInException.java  AlreadyLoggedInExceptionHelper.java  AlreadyLoggedInExceptionHolder.java  Boggled.java  BoggledHelper.java  BoggledHolder.java  BoggledOperations.java  BoggledPOA.java  Callback.java  CallbackHelper.java  CallbackHolder.java  CallbackOperations.java  CallbackPOA.java  CallbackServant.java  InsufficientPlayerException.java  InsufficientPlayerExceptionHelper.java  InsufficientPlayerExceptionHolder.java  Leaderboards.java  LeaderboardsHelper.java  LeaderboardsHolder.java  NoWinnerException.java  NoWinnerExceptionHelper.java  NoWinnerExceptionHolder.java  NotLoggedInException.java  NotLoggedInExceptionHelper.java  NotLoggedInExceptionHolder.java  UserNotFoundException.java  UserNotFoundExceptionHelper.java  UserNotFoundExceptionHolder.java  _BoggledStub.java  _CallbackStub.java
Client_Java/src/terminalclient/: CallbackServant.java  JavaClient.java
Server_Java/lib/mysql-connector-j-8.3.0/: CHANGES
Server_Java/src/BoggledApp/: AlreadyLoggedInException.java  AlreadyLoggedInExceptionHelper.java  AlreadyLoggedInExceptionHolder.java  Boggled.java  BoggledHelper.java  BoggledHolder.java  BoggledOperations.java  BoggledPOA.java  Callback.java  CallbackHelper.java  CallbackHolder.java  CallbackOperations.java  CallbackPOA.java  CallbackServant.java  InsufficientPlayerException.java  InsufficientPlayerExceptionHelper.java  InsufficientPlayerExceptionHolder.java  Leaderboards.java  LeaderboardsHelper.java  LeaderboardsHolder.java  NoWinnerException.java  NoWinnerExceptionHelper.java  NoWinnerExceptionHolder.java  NotLoggedInException.java  NotLoggedInExceptionHelper.java  NotLoggedInExceptionHolder.java  UserNotFoundException.java  UserNotFoundExceptionHelper.java  UserNotFoundExceptionHolder.java  _BoggledStub.java  _CallbackStub.java
client_cpp/: CMakeLists.txt
client_cpp/lib/omniORB4/: acconfig.h  distdate.hh  pydistdate.hh
client_cpp/src/: boggled.hh  boggledSK.cc  client.cpp
client_python/: boggled.idl  boggled_idl.py  client.py
client_python/BoggledApp/: __init__.py
client_python/BoggledApp__POA/: __init__.py
docs/: idl.md
orb.db/: NC0
res/bat/orb.db/: NC0
res/text/: words.txt
sql/: boggled_game.sql
src/: AppLauncher.java  Main.java  WordGame.java  WordGameGUI.java  boggled.idl
src/BoggledApp/: Account.java  AccountHelper.java  AccountHolder.java  AlreadyLoggedInException.java  AlreadyLoggedInExceptionHelper.java  AlreadyLoggedInExceptionHolder.java  Boggled.java  BoggledClient.java  BoggledHelper.java  BoggledHolder.java  BoggledImpl.java  BoggledImplementation.java  BoggledOperations.java  BoggledPOA.java  BoggledServant.java  Callback.java  CallbackHelper.java  CallbackHolder.java  CallbackOperations.java  CallbackPOA.java  CallbackServant.java  GamePlayer.java  GamePlayerHelper.java  GamePlayerHolder.java  GameResult.java  GameResultHelper.java  GameResultHolder.java  GameRoom.java  GameRoomHelper.java  GameRoomHolder.java  GameWinner.java  GameWinnerHelper.java  GameWinnerHolder.java  InsufficientPlayerException.java  InsufficientPlayerExceptionHelper.java  InsufficientPlayerExceptionHolder.java  InsufficientPlayersException.java  InsufficientPlayersExceptionHelper.java  InsufficientPlayersExceptionHolder.java  InvalidWordException.java  (+19 more)
src/BoggledApp/BoggledPackage/: gamePlayersHelper.java  gamePlayersHolder.java  leaderboardsHelper.java  leaderboardsHolder.java  lettersHelper.java  lettersHolder.java
src/Client_Java/BoggledApp/: AlreadyLoggedInException.java  AlreadyLoggedInExceptionHelper.java  AlreadyLoggedInExceptionHolder.java  Boggled.java  BoggledHelper.java  BoggledHolder.java  BoggledOperations.java  BoggledPOA.java  Callback.java  CallbackHelper.java  CallbackHolder.java  CallbackOperations.java  CallbackPOA.java  InsufficientPlayerException.java  InsufficientPlayerExceptionHelper.java  InsufficientPlayerExceptionHolder.java  UserNotFoundException.java  UserNotFoundExceptionHelper.java  UserNotFoundExceptionHolder.java  _BoggledStub.java  _CallbackStub.java
src/Server_Java/BoggledApp/: AlreadyLoggedInException.java  Boggled.java  (+19 more)
src/accessdata/: DatabaseConnector.java  GameDB.java  PlayerDB.java  SettingsDB.java
src/core/: Size.java
src/db/: DatabaseConnector.java  GameDB.java  PlayerDB.java  SettingsDB.java
src/display/: Display.java
src/exceptions/: InsufficientPlayersException.java  NotLoggedInException.java  UserNotFoundException.java
src/game/: Game.java  Time.java  View.java
src/input/: Input.java
src/main/: GamePanel.java  KeyHandler.java  Sound.java  UI.java  WordGame.java
src/references/: Game.java  Leaderboard.java  Player.java  Settings.java
src/run/: AppLauncher.java
src/state/: State.java
src/temp/: Launcher.java
src/test/: Test.java  WordAlgorithm.java
(+761 files in other folders)
