cmake_minimum_required(VERSION 3.28)
project(client_c__)

set(CMAKE_CXX_STANDARD 14)

include_directories(lib)
include_directories(lib/COS)
include_directories(lib/omniORB4)
include_directories(lib/omniORB4/internal)
include_directories(lib/omnithread)
include_directories(src)

add_executable(client_c__
        lib/COS/COS_sysdep.h
        lib/COS/CosEventChannelAdmin.hh
        lib/COS/CosEventComm.hh
        lib/COS/CosLifeCycle.hh
        lib/COS/CosNotification.hh
        lib/COS/CosNotifyChannelAdmin.hh
        lib/COS/CosNotifyComm.hh
        lib/COS/CosNotifyFilter.hh
        lib/COS/CosTime.hh
        lib/COS/TimeBase.hh
        lib/omniORB4/internal/anonObject.h
        lib/omniORB4/internal/codeSetUtil.h
        lib/omniORB4/internal/context.h
        lib/omniORB4/internal/corbaBoa.h
        lib/omniORB4/internal/corbaOrb.h
        lib/omniORB4/internal/dynamicImplementation.h
        lib/omniORB4/internal/dynamicLib.h
        lib/omniORB4/internal/dynAnyImpl.h
        lib/omniORB4/internal/excepthandler.h
        lib/omniORB4/internal/exceptiondefs.h
        lib/omniORB4/internal/GIOP_C.h
        lib/omniORB4/internal/GIOP_S.h
        lib/omniORB4/internal/giopBiDir.h
        lib/omniORB4/internal/giopMonitor.h
        lib/omniORB4/internal/giopRendezvouser.h
        lib/omniORB4/internal/giopRope.h
        lib/omniORB4/internal/giopServer.h
        lib/omniORB4/internal/giopStrand.h
        lib/omniORB4/internal/giopStrandFlags.h
        lib/omniORB4/internal/giopStream.h
        lib/omniORB4/internal/giopStreamImpl.h
        lib/omniORB4/internal/giopWorker.h
        lib/omniORB4/internal/initialiser.h
        lib/omniORB4/internal/initRefs.h
        lib/omniORB4/internal/inProcessIdentity.h
        lib/omniORB4/internal/interceptors.h
        lib/omniORB4/internal/invoker.h
        lib/omniORB4/internal/libcWrapper.h
        lib/omniORB4/internal/localIdentity.h
        lib/omniORB4/internal/objectAdapter.h
        lib/omniORB4/internal/objectStub.h
        lib/omniORB4/internal/objectTable.h
        lib/omniORB4/internal/omniCurrent.h
        lib/omniORB4/internal/omniIdentity.h
        lib/omniORB4/internal/orbOptions.h
        lib/omniORB4/internal/orbParameters.h
        lib/omniORB4/internal/poacurrentimpl.h
        lib/omniORB4/internal/poaimpl.h
        lib/omniORB4/internal/poamanager.h
        lib/omniORB4/internal/pseudo.h
        lib/omniORB4/internal/remoteIdentity.h
        lib/omniORB4/internal/request.h
        lib/omniORB4/internal/rmutex.h
        lib/omniORB4/internal/shutdownIdentity.h
        lib/omniORB4/internal/SocketCollection.h
        lib/omniORB4/internal/tcParser.h
        lib/omniORB4/internal/tcpSocket.h
        lib/omniORB4/internal/transportRules.h
        lib/omniORB4/internal/typecode.h
        lib/omniORB4/internal/unknownValue.h
        lib/omniORB4/internal/valueTrackerImpl.h
        lib/omniORB4/acconfig.h
        lib/omniORB4/ami.h
        lib/omniORB4/anyStream.h
        lib/omniORB4/BiDirPolicy.h
        lib/omniORB4/boa.h
        lib/omniORB4/bootstrap.hh
        lib/omniORB4/boxes_defs.hh
        lib/omniORB4/boxes_operators.hh
        lib/omniORB4/boxes_poa.hh
        lib/omniORB4/callDescriptor.h
        lib/omniORB4/callHandle.h
        lib/omniORB4/cdrStream.h
        lib/omniORB4/codeSets.h
        lib/omniORB4/compression.hh
        lib/omniORB4/connectionInfo.h
        lib/omniORB4/CORBA.h
        lib/omniORB4/CORBA_AbstractBase.h
        lib/omniORB4/CORBA_Any.h
        lib/omniORB4/CORBA_Any_vartypes.h
        lib/omniORB4/CORBA_basetypes.h
        lib/omniORB4/CORBA_BOA.h
        lib/omniORB4/CORBA_Context.h
        lib/omniORB4/CORBA_Current.h
        lib/omniORB4/CORBA_DomainManager.h
        lib/omniORB4/CORBA_Environment.h
        lib/omniORB4/CORBA_Exception.h
        lib/omniORB4/CORBA_ExceptionList.h
        lib/omniORB4/CORBA_Fixed.h
        lib/omniORB4/CORBA_LocalObject.h
        lib/omniORB4/CORBA_LocalObject_vartypes.h
        lib/omniORB4/CORBA_NamedValue.h
        lib/omniORB4/CORBA_Object.h
        lib/omniORB4/CORBA_Object_vartypes.h
        lib/omniORB4/corba_operators.h
        lib/omniORB4/CORBA_ORB.h
        lib/omniORB4/CORBA_Policy.h
        lib/omniORB4/CORBA_primitive_types.h
        lib/omniORB4/CORBA_Principal.h
        lib/omniORB4/CORBA_Request.h
        lib/omniORB4/CORBA_ServerRequest.h
        lib/omniORB4/CORBA_static_fns.h
        lib/omniORB4/CORBA_String.h
        lib/omniORB4/CORBA_sysdep.h
        lib/omniORB4/CORBA_sysdep_auto.h
        lib/omniORB4/CORBA_sysdep_trad.h
        lib/omniORB4/CORBA_TypeCode.h
        lib/omniORB4/CORBA_TypeCode_member.h
        lib/omniORB4/CORBA_UnknownUserException.h
        lib/omniORB4/CORBA_ValueBase.h
        lib/omniORB4/CORBA_ValueBase_vartypes.h
        lib/omniORB4/CORBA_vartypes.h
        lib/omniORB4/corbaidl_defs.hh
        lib/omniORB4/corbaidl_operators.hh
        lib/omniORB4/corbaidl_poa.hh
        lib/omniORB4/distdate.hh
        lib/omniORB4/dynAny.h
        lib/omniORB4/finalCleanup.h
        lib/omniORB4/fixed.h
        lib/omniORB4/GIOP.h
        lib/omniORB4/giopEndpoint.h
        lib/omniORB4/httpContext.h
        lib/omniORB4/httpCrypto.h
        lib/omniORB4/IIOP.h
        lib/omniORB4/IOP.h
        lib/omniORB4/IOP_C.h
        lib/omniORB4/IOP_S.h
        lib/omniORB4/ir_defs.hh
        lib/omniORB4/ir_operators.hh
        lib/omniORB4/ir_poa.hh
        lib/omniORB4/linkHacks.h
        lib/omniORB4/local_config.h
        lib/omniORB4/messaging.hh
        lib/omniORB4/messaging_policy.hh
        lib/omniORB4/minorCode.h
        lib/omniORB4/Naming.hh
        lib/omniORB4/objTracker.h
        lib/omniORB4/omniAsyncInvoker.h
        lib/omniORB4/omniConnectionData.hh
        lib/omniORB4/omniConnectionMgmt.h
        lib/omniORB4/omniInterceptors.h
        lib/omniORB4/omniInternal.h
        lib/omniORB4/omniIOR.h
        lib/omniORB4/omniObjKey.h
        lib/omniORB4/omniObjRef.h
        lib/omniORB4/omniORB.h
        lib/omniORB4/omniORBcompat.h
        lib/omniORB4/omniPolicy.h
        lib/omniORB4/omniServant.h
        lib/omniORB4/omniServer.h
        lib/omniORB4/omniTransport.h
        lib/omniORB4/omniTypedefs.hh
        lib/omniORB4/omniURI.h
        lib/omniORB4/omniutilities.h
        lib/omniORB4/omniZIOP.h
        lib/omniORB4/optionalFeatures.h
        lib/omniORB4/poa.h
        lib/omniORB4/poa_defs.h
        lib/omniORB4/poa_enums_defs.hh
        lib/omniORB4/poa_enums_operators.hh
        lib/omniORB4/poa_enums_poa.hh
        lib/omniORB4/poa_poa.h
        lib/omniORB4/pollable_defs.hh
        lib/omniORB4/pollable_operators.hh
        lib/omniORB4/pollable_poa.hh
        lib/omniORB4/proxyFactory.h
        lib/omniORB4/pydistdate.hh
        lib/omniORB4/seqTemplatedecls.h
        lib/omniORB4/seqTemplatedefns.h
        lib/omniORB4/sslContext.h
        lib/omniORB4/streamOperators.h
        lib/omniORB4/stringtypes.h
        lib/omniORB4/tcpAddress.h
        lib/omniORB4/tcpConnection.h
        lib/omniORB4/tcpEndpoint.h
        lib/omniORB4/tcpTransportImpl.h
        lib/omniORB4/templatedecls.h
        lib/omniORB4/templatedefns.h
        lib/omniORB4/tracedthread.h
        lib/omniORB4/unixAddress.h
        lib/omniORB4/unixConnection.h
        lib/omniORB4/unixEndpoint.h
        lib/omniORB4/unixTransportImpl.h
        lib/omniORB4/userexception.h
        lib/omniORB4/valueFactoryManager.h
        lib/omniORB4/valueTemplatedecls.h
        lib/omniORB4/valueTemplatedefns.h
        lib/omniORB4/valueType.h
        lib/omniORB4/wstringtypes.h
        lib/omniORB4/ziop_defs.hh
        lib/omniORB4/ziop_operators.hh
        lib/omniORB4/ziopStubs.h
        lib/omnithread/atomic.h
        lib/omnithread/nt.h
        lib/omnithread/posix.h
        lib/omnithread/pthread_nt.h
        lib/omniconfig.h
        lib/omnithread.h
        src/boggled.hh
        src/boggledSK.cc
        src/client.cpp
)
